# ted

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  Untitled  add-to-repo.sh  arr.c  autocomplete.c  base.h  buffer.c  build.c  colors.c  colors.h  command.c  command.h  config.c  control  credits.txt  development.md  ds.c  ds.h  filesystem-posix.c  filesystem-win.c  filesystem.c  filesystem.h  find.c  gl.c  hover.c  ide-autocomplete.c  ide-definitions.c  ide-document-link.c  ide-format.c  ide-highlights.c  ide-hover.c  ide-rename-symbol.c  ide-signature-help.c  ide-usages.c  (+55 more)
lib/: glcorearb.h
styles/: classic.ted.cfg  extradark.ted.cfg
test/: test.cfg  test.cpp  test.css  test.go  test.html  test.rs
test/editorconfig/: .editorconfig  .ted.cfg  file.txt  gov.biz
test/editorconfig/subdir/: .editorconfig  .ted.cfg  a.biz
test/lsp/: multidef.cpp
test/lsp/JavaA/: Main.java
test/lsp/JavaB/: B.java
test/lsp/go/: main.go
test/lsp/js/: main.js
test/lsp/python/: test.py
test/lsp/rust/src/: foo.rs  main.rs
test/lsp/tex/: thing.tex
themes/: classic-light.ted.cfg  classic.ted.cfg  extradark.ted.cfg
windows_installer/ted/: ted.sln  ted.vdproj
windows_installer/ted/ted/: ted.vdproj
