cmake_minimum_required(VERSION 3.1)
project(ted)
set(SOURCES buffer.c build.c colors.c command.c config.c find.c gl.c ide-autocomplete.c
	ide-definitions.c ide-highlights.c ide-hover.c ide-signature-help.c ide-usages.c
	lsp.c lsp-json.c lsp-parse.c lsp-write.c main.c  menu.c node.c os.c session.c
	stb_image.c stb_truetype.c syntax.c tags.c ted.c text.c ui.c util.c)
if (MSVC)
	add_executable(ted WIN32 ${SOURCES})
else()
	add_executable(ted ${SOURCES})
endif()
target_compile_definitions(ted PUBLIC DEBUG=1)
if(MSVC)
	target_sources(ted PRIVATE ted.res)
	target_include_directories(ted PUBLIC ${CMAKE_SOURCE_DIR}/SDL2/include ${CMAKE_SOURCE_DIR}/pcre2)
	target_compile_options(ted PRIVATE /MD /W4 /wd4200 /wd4204 /wd4221 /wd4706 /wd4214 /D_CRT_SECURE_NO_WARNINGS)
	set(SDL2_LIB_DIR ${CMAKE_SOURCE_DIR}/SDL2/lib/x64)
	target_link_libraries(ted ${SDL2_LIB_DIR}/SDL2.lib)
	target_link_libraries(ted ${CMAKE_SOURCE_DIR}/pcre2-32-static.lib)
else()
	target_link_libraries(ted m SDL2)
	target_link_libraries(ted ${CMAKE_SOURCE_DIR}/libpcre2-32.a)
endif()
